--- a/src/index.html
+++ b/src/index.html
@@ -14,23 +14,24 @@
     <main class="container">
         <nav class="container">
             <a href="#main" id="0">
-                <i data-feather="circle"></i>
+                <i data-feather="maximize"></i>
+                <!-- 🏛️ -->
             </a>
             <ul class="links">
                 <li>
-                    <a href="#tapestry">Tapestry</a>
+                    <a href="#tapestry"><small>Tapestry</small></a>
                 </li>
                 <li>
-                    <a href="#fireplace">Fireplace</a>
+                    <a href="#fireplace"><small>Fireplace</small></a>
                 </li>
                 <li>
-                    <a href="#ceiling">Ceiling</a>
+                    <a href="#ceiling"><small>Ceiling</small></a>
                 </li>
                 <li>
-                    <a href="#piano">Grand Piano</a>
+                    <a href="#piano"><small>Grand Piano</small></a>
                 </li>
                 <li>
-                    <a href="#museum">The Museum</a>
+                    <a href="#museum"><small>The Museum</small></a>
                 </li>
             </ul>
         </nav>
@@ -39,7 +40,7 @@
             <div>
                 <h1>The Hallwyl Museum</h1>
                 <hr />
-                <h6>An immersive experience by francescamilk</h6>
+                <p>An immersive experience by francescamilk</p>
             </div>
         </section>
 
@@ -125,6 +126,15 @@
                 </p>
             </div>
         </section>
+
+        <footer>
+            <p>
+                <small>Copyright © FRANCESCAMILK x The Hallwyl Museum 2024</small>
+            </p>
+            <a href="#">
+                <small>Cookies</a> | <a href="#">Privacy</small>
+            </a>
+        </footer>
     </main>
 
     <canvas id="webgl"></canvas>
