camera animation first draft

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
             <div>
                 <h1>The Hallwyl Museum</h1>
                 <hr />
-                <p>An immersive experience by francescamilk</p>
+                <p>An immersive experience by <span>francescamilk</span></p>
             </div>
         </section>
 
@@ -120,21 +120,25 @@
                     The house was inhabited until 1930 and has since been a state-owned museum <br />
                     which is now part of the National Historical Museums (SHM), a government agency. <br />
                     <br />
-                    Find Hallwyl Museum's fantastic environment and history wherever you are. We offer digital guided tours, lectures and much more.
+                    Find Hallwyl Museum's fantastic environment and history wherever you are. We offer digital guided tours, lectures and much more. <br />
                     <br />
-                    hallwylskamuseet.se/
+                    <span>hallwylskamuseet.se</span>
                 </p>
             </div>
+
+            <a href="#main">
+                <i id="up" data-feather="arrow-up"></i>
+            </a>
+            <footer>
+                <p>
+                    <small>Copyright © FRANCESCAMILK x The Hallwyl Museum 2024</small>
+                </p>
+                <span>
+                    <small>Cookies</a> | Privacy</small>
+                </span>
+            </footer>
         </section>
     </main>
-    <footer>
-        <p>
-            <small>Copyright © FRANCESCAMILK x The Hallwyl Museum 2024</small>
-        </p>
-        <span>
-            <small>Cookies</a> | Privacy</small>
-        </span>
-    </footer>
 
     <canvas id="webgl"></canvas>
     <script type="module" src="./main.js"></script>
