--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>The Hallwyl Museum | MILK ThreeJS Experience</title>
+    <title>Hallwylska Museet | MILK Experience</title>
     <meta name="description" content="Francescamilk x The Hallwyll Museum">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🏛️</text></svg>">
 
@@ -120,7 +120,7 @@
                     The house was inhabited until 1930 and has since been a state-owned museum <br />
                     which is now part of the National Historical Museums (SHM), a government agency. <br />
                     <br />
-                    Find Hallwyl Museum's fantastic environment and history wherever you are. We offer digital guided tours, lectures and much more. <br />
+                    Explore Hallwyl Museum's fantastic environment and history wherever you are. We offer digital guided tours, lectures and much more. <br />
                     <br />
                     <span>hallwylskamuseet.se</span>
                 </p>
@@ -131,7 +131,7 @@
             </a>
             <footer>
                 <p>
-                    <small>Copyright © FRANCESCAMILK x The Hallwyl Museum 2024</small>
+                    <small>Copyright © FRANCESCAMILK x (unofficial) Hallwyl Museum 2024</small>
                 </p>
                 <span>
                     <small>Cookies</a> | Privacy</small>
